src/tests/snapshots/ppl__tests__array.hir.snap
---
source: src/tests/mod.rs
expression: hir
---
let mut arr: Array<Integer> = (Type<Integer>:Type<Integer>) [ ]
if (&arr:ReferenceMut<Array<Integer>>) is empty:
	println "Empty"

push 1 to (&arr:ReferenceMut<Array<Integer>>)
if (&arr:ReferenceMut<Array<Integer>>) is not empty:
	println "Not empty"

println clone (*(&arr:ReferenceMut<Array<Integer>>) [ 0 ]:Integer)
