src/tests/snapshots/ppl__tests__clone.ir.snap
---
source: src/tests/mod.rs
expression: ir
---
; ModuleID = 'main'
source_filename = "src/main.ppl"

%"Type<String>" = type { %String, %Integer }
%String = type { ptr }
%Integer = type { ptr }

@"Type<String>" = private global %"Type<String>" zeroinitializer
@0 = private unnamed_addr constant [7 x i8] c"String\00", align 1
@x = global %Integer zeroinitializer
@y = global %Integer zeroinitializer
@"$tmp0@36" = global %Integer zeroinitializer
@"$tmp0@46" = global %Integer zeroinitializer
@"$tmp0@62" = global %Integer zeroinitializer
@"$tmp0@72" = global %Integer zeroinitializer

define private void @initialize() !dbg !3 {
  %1 = alloca %"Type<String>", align 8, !dbg !7
  %"Type<String>.name" = getelementptr inbounds %"Type<String>", ptr %1, i32 0, i32 0, !dbg !7
  %2 = call %String @string_from_c_string_and_length(ptr @0, i64 6), !dbg !8
  store %String %2, ptr %"Type<String>.name", align 8, !dbg !8
  %"Type<String>.size" = getelementptr inbounds %"Type<String>", ptr %1, i32 0, i32 1, !dbg !8
  %3 = call %Integer @integer_from_i64(i64 8), !dbg !8
  store %Integer %3, ptr %"Type<String>.size", align 8, !dbg !8
  %4 = load %"Type<String>", ptr %1, align 8, !dbg !8
  store %"Type<String>" %4, ptr @"Type<String>", align 8, !dbg !8
  br label %return, !dbg !8

return:                                           ; preds = %0
  ret void
}

declare %String @string_from_c_string_and_length(ptr, i64)

declare %Integer @integer_from_i64(i64)

define private void @initialize.1() !dbg !9 {
  %1 = call %Integer @integer_from_i64(i64 1), !dbg !10
  store %Integer %1, ptr @x, align 8, !dbg !10
  br label %return, !dbg !10

return:                                           ; preds = %0
  ret void
}

define private void @initialize.2() !dbg !11 {
  %1 = load %Integer, ptr @x, align 8, !dbg !12
  %2 = call %Integer @clone_integer(%Integer %1), !dbg !12
  store %Integer %2, ptr @y, align 8, !dbg !12
  br label %return, !dbg !12

return:                                           ; preds = %0
  ret void
}

declare %Integer @clone_integer(%Integer)

define private void @initialize.3() !dbg !13 {
  %1 = load %Integer, ptr @x, align 8, !dbg !14
  %2 = call %Integer @clone_integer(%Integer %1), !dbg !14
  store %Integer %2, ptr @"$tmp0@36", align 8, !dbg !14
  br label %return, !dbg !14

return:                                           ; preds = %0
  ret void
}

define private void @initialize.4() !dbg !15 {
  %1 = load %Integer, ptr @y, align 8, !dbg !16
  %2 = call %Integer @clone_integer(%Integer %1), !dbg !16
  store %Integer %2, ptr @"$tmp0@46", align 8, !dbg !16
  br label %return, !dbg !16

return:                                           ; preds = %0
  ret void
}

define private void @initialize.5() !dbg !17 {
  %1 = load %Integer, ptr @x, align 8, !dbg !18
  %2 = call %Integer @clone_integer(%Integer %1), !dbg !18
  store %Integer %2, ptr @"$tmp0@62", align 8, !dbg !18
  br label %return, !dbg !18

return:                                           ; preds = %0
  ret void
}

define private void @initialize.6() !dbg !19 {
  %1 = load %Integer, ptr @y, align 8, !dbg !20
  %2 = call %Integer @clone_integer(%Integer %1), !dbg !20
  store %Integer %2, ptr @"$tmp0@72", align 8, !dbg !20
  br label %return, !dbg !20

return:                                           ; preds = %0
  ret void
}

define void @main.execute() !dbg !21 {
init_globals:
  call void @initialize(), !dbg !22
  call void @initialize.1(), !dbg !23
  call void @initialize.2(), !dbg !24
  call void @initialize.3(), !dbg !25
  call void @initialize.4(), !dbg !26
  call void @initialize.5(), !dbg !27
  call void @initialize.6(), !dbg !28
  br label %0, !dbg !28

0:                                                ; preds = %init_globals
  %1 = load %Integer, ptr @y, align 8, !dbg !29
  call void @destroy_integer(%Integer %1), !dbg !29
  %2 = call %Integer @integer_from_i64(i64 2), !dbg !30
  store %Integer %2, ptr @y, align 8, !dbg !30
  %3 = load %Integer, ptr @x, align 8, !dbg !31
  call void @destroy_integer(%Integer %3), !dbg !31
  %4 = load %Integer, ptr @y, align 8, !dbg !32
  call void @destroy_integer(%Integer %4), !dbg !32
  %5 = load %Integer, ptr @"$tmp0@36", align 8, !dbg !25
  call void @destroy_integer(%Integer %5), !dbg !25
  %6 = load %Integer, ptr @"$tmp0@46", align 8, !dbg !26
  call void @destroy_integer(%Integer %6), !dbg !26
  %7 = load %Integer, ptr @"$tmp0@62", align 8, !dbg !27
  call void @destroy_integer(%Integer %7), !dbg !27
  %8 = load %Integer, ptr @"$tmp0@72", align 8, !dbg !28
  call void @destroy_integer(%Integer %8), !dbg !28
  br label %return, !dbg !28

return:                                           ; preds = %0
  ret void
}

declare void @destroy_integer(%Integer)

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "ppl", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false, sysroot: "/")
!2 = !DIFile(filename: "src/main.ppl", directory: ".")
!3 = distinct !DISubprogram(name: "initialize", linkageName: "initialize", scope: !2, file: !2, line: 7, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!4 = !DISubroutineType(types: !5)
!5 = !{!6}
!6 = !DIBasicType(name: "i32", size: 32, encoding: DW_ATE_signed)
!7 = !DILocation(line: 7, scope: !3)
!8 = !DILocation(line: 0, scope: !3)
!9 = distinct !DISubprogram(name: "initialize.1", linkageName: "initialize.1", scope: !2, file: !2, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!10 = !DILocation(line: 0, column: 12, scope: !9)
!11 = distinct !DISubprogram(name: "initialize.2", linkageName: "initialize.2", scope: !2, file: !2, line: 1, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!12 = !DILocation(line: 1, column: 12, scope: !11)
!13 = distinct !DISubprogram(name: "initialize.3", linkageName: "initialize.3", scope: !2, file: !2, line: 2, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!14 = !DILocation(line: 2, column: 8, scope: !13)
!15 = distinct !DISubprogram(name: "initialize.4", linkageName: "initialize.4", scope: !2, file: !2, line: 3, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!16 = !DILocation(line: 3, column: 8, scope: !15)
!17 = distinct !DISubprogram(name: "initialize.5", linkageName: "initialize.5", scope: !2, file: !2, line: 5, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!18 = !DILocation(line: 5, column: 8, scope: !17)
!19 = distinct !DISubprogram(name: "initialize.6", linkageName: "initialize.6", scope: !2, file: !2, line: 6, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!20 = !DILocation(line: 6, column: 8, scope: !19)
!21 = distinct !DISubprogram(name: "main.execute", linkageName: "main.execute", scope: !2, file: !2, line: 2, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!22 = !DILocation(line: 7, scope: !21)
!23 = !DILocation(line: 0, column: 12, scope: !21)
!24 = !DILocation(line: 1, column: 12, scope: !21)
!25 = !DILocation(line: 2, column: 8, scope: !21)
!26 = !DILocation(line: 3, column: 8, scope: !21)
!27 = !DILocation(line: 5, column: 8, scope: !21)
!28 = !DILocation(line: 6, column: 8, scope: !21)
!29 = !DILocation(line: 4, scope: !21)
!30 = !DILocation(line: 4, column: 4, scope: !21)
!31 = !DILocation(line: 0, scope: !21)
!32 = !DILocation(line: 1, scope: !21)
