src/tests/snapshots/ppl__tests__consume_greater.hir.snap
---
source: src/tests/mod.rs
expression: hir
---
type Point<U>:
	x: U

let $tmp0@42: Integer = 1
let $tmp1@22: Point<Integer> = Point<Integer> { x: ($tmp0@42:Integer) }
$tmp1@22
destroy ($tmp0@42:Integer)
