src/tests/snapshots/ppl__tests__deps.hir.snap
---
source: src/tests/mod.rs
expression: hir
---
use helper.*
let $tmp0@14: None = say hello
$tmp0@14
